# soloswapy

./: .gitignore  MANIFEST.in  README.rst  setup.cfg  setup.py  test.py  tox.ini
docs/: conf.py  getting_started.rst  index.rst
docs/code_ref/: dist.rst  index.rst
examples/: distribution.py  part_mom.py  pitch_angle.py
licenses/: LICENSE.rst
soloswapy/data/: __init__.py  core.py  eas.py  util.py
soloswapy/visualisation/: core.py
