[metadata]
name = soloswapy
author = David Stansby
author_email = d.stansby@ucl.ac.uk
license = GNU GPL v3+
license_file = licenses/LICENSE.rst
url = 
description = Python package for SWA analysis
long_description = file: README.rst

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
setup_requires = setuptools_scm
install_requires = 



[options.extras_require]
all =
test =
    pytest
    pytest-doctestplus
    pytest-cov
docs =
    sphinx
    sphinx-automodapi

[options.package_data]
soloswapy = data/*

[tool:pytest]
testpaths = "soloswapy" "docs"
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
  soloswapy/__init*
  soloswapy/conftest.py
  soloswapy/*setup_package*
  soloswapy/tests/*
  soloswapy/*/tests/*
  soloswapy/extern/*
  soloswapy/version*
  */soloswapy/__init*
  */soloswapy/conftest.py
  */soloswapy/*setup_package*
  */soloswapy/tests/*
  */soloswapy/*/tests/*
  */soloswapy/extern/*
  */soloswapy/version*

[coverage:report]
exclude_lines =
  # Have to re-enable the standard pragma
  pragma: no cover
  # Don't complain about packages we have installed
  except ImportError
  # Don't complain if tests don't hit assertions
  raise AssertionError
  raise NotImplementedError
  # Don't complain about script hooks
  def main\(.*\):
  # Ignore branches that don't pertain to this version of Python
  pragma: py{ignore_python_version}
  # Don't complain about IPython completion helper
  def _ipython_key_completions_
